# Fox

./: .gitignore  Acknowledgments.txt  Backend To-Do.txt  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  Moonshot.sln  PostMortem.md  README.md  State of Development.txt  To-Do.txt  VM and BC To-Do.txt  todo.txt
lib/: CMakeLists.txt  VM To-Do.txt
lib/AST/: ASTContext.cpp  ASTDumper.cpp  ASTNode.cpp  ASTWalker.cpp  BuiltinTypeMembers.cpp  BuiltinsTypes.cpp  CMakeLists.txt  Constraints.cpp  Decl.cpp  DeclContext.cpp  Expr.cpp  Identifier.cpp  Identifiers.cpp  Stmt.cpp  Type.cpp  TypeBuiltins.cpp  TypeMembers.cpp  TypeWalker.cpp  Types.cpp
lib/BC/: BCBuilder.cpp  BCFunction.cpp  BCModule.cpp  CMakeLists.txt  DebugInfo.cpp  Instruction.cpp  Instructions.cpp
lib/BCGen/: BCGen.cpp  BCGenDecl.cpp  BCGenExpr.cpp  BCGenStmt.cpp  CMakeLists.txt  LoopContext.cpp  LoopContext.hpp  Registers.cpp  Registers.hpp
lib/Common/: Builtins.cpp  CMakeLists.txt  Diagnostic.cpp  DiagnosticConsumers.cpp  DiagnosticEngine.cpp  DiagnosticVerifier.cpp  DiagnosticVerifier.hpp  Errors.cpp  LinearAllocator.cpp  Logger.cpp  Objects.cpp  QuotedString.cpp  Source.cpp  StringManipulator.cpp  UTF8.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp
lib/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp
lib/Moonshot/: CMakeLists.txt  Version.hpp  upcoming_refactor.md
lib/Moonshot/Common/: CMakeLists.txt
lib/Moonshot/Common/Context/: CMakeLists.txt  Context.cpp  Context.hpp
lib/Moonshot/Common/Diagnostics/: BuiltinDiagConsumers.cpp  BuiltinDiagConsumers.hpp  CMakeLists.txt  Diagnostic.cpp  Diagnostic.hpp  DiagnosticEngine.cpp  DiagnosticEngine.hpp  DiagsCommon.def  readme.md  todo.txt
lib/Moonshot/Common/Exceptions/: CMakeLists.txt  Exceptions.cpp
lib/Moonshot/Common/Flags/: CommonFlags.def  Flags.cpp  Flags.hpp  FlagsManager.hpp  FoxFlags.def
lib/Moonshot/Common/Source/: todo-sourcemanager.txt
lib/Moonshot/Common/Types/: CMakeLists.txt  FVTypeTraits.hpp  FoxValueUtils.cpp  FoxValueUtils.hpp  Types.cpp  Types.hpp  TypesUtils.cpp  todo.txt
lib/Moonshot/Common/Utils/: Utils.hpp
lib/Moonshot/Driver/: Driver.cpp  Driver.hpp
lib/Moonshot/Fox/AST/: ASTDecl.cpp  ASTDecl.hpp  ASTExpr.cpp  ASTExpr.hpp  ASTStmt.hpp  ASTUnit.hpp  Dumper.cpp  (+4 more)
lib/Moonshot/Tests/: CMakeLists.txt
lib/Parser/: CMakeLists.txt  ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  Parser.cpp  Scope.cpp
lib/Sema/: CMakeLists.txt  Design.txt  Issues.txt  LocalScope.cpp  Pitfalls.txt  Scope.cpp  Sema.cpp  SemaBuiltins.cpp  SemaDecl.cpp  SemaExpr.cpp  SemaExprs.cpp  SemaLookup.cpp  SemaStmt.cpp  SemaTypes.cpp
lib/VM/: CMakeLists.txt  InstructionBuilder.cpp  Instructions.cpp  Opcode.cpp  Status.txt  VM.cpp  VMBuiltins.cpp  VMDiagnostics.cpp  VMModule.cpp  Value.cpp
tests/: CMakeLists.txt  lit.cfg
tests/Diagnostics/Parser/: expected_decl_in_unit.fox  func_expected_curly.fox  func_expected_identifier.fox  func_expected_paramdecl.fox  func_expected_roundbracket.fox  func_expected_type.fox  missing_semi.fox  param_expected_colon.fox  param_expected_type.fox  var_expected_colon.fox  var_expected_expr  var_expected_inden.fox  var_expected_type.fox  var_ignore_ref.fox
tests/Diagnostics/Sema/: array_literals.fox  array_subscript.fox  binary.fox  cast.fox  expr.fox  unary.fox
tests/Diagnostics/Verifier/: normalmode.fox  softmode.fox  strictmode.fox  verify.fox  verify_fail_if_not_emitted.fox
tests/FileCheck/Builtins/: builtins.fox  publicBuiltins.fox
tests/FileCheck/Driver/: unknown_arg.fox
tests/FileCheck/Parser/: loc.fox  operators.fox  precedence.fox
tests/FileCheck/Sema/: builtin_members.fox  name_binding.fox  unused_params.fox
tests/FileCheck/run/: arrays.fox  fib.fox  fizzbuzz.fox  globals.fox  logic.fox  missing_entry_point.fox  print.fox  return_failure.fox  return_failure_overflow.fox  return_overflow_negative.fox  return_overflow_positive.fox  return_success.fox  strings.fox  toString.fox
tests/VerifyMode/: fail_on_err.fox
tests/VerifyMode/Lexer/: invalid_char_in_source.fox  unterminated_block_comment.fox  unterminated_char_lit.fox  unterminated_str_lit.fox
tests/VerifyMode/Parser/: conditionstmt  func_expected_roundbracket.fox  func_expected_type.fox  missing_semi.fox  parseArrayLiteral.fox  parseCompoundStmt.fox  parseExprStmt.fox  parseFuncDecl1.fox  parseFuncDecl2.fox  parseFuncDecl3.fox  parseFuncDecl4.fox  parseParamDecl2.fox  parseParenExpr.fox  parseParenExprList.fox  parseReturnStmt.fox  parseSuffix.fox  parseType.fox  parseUnit2.fox  parseVarDecl.fox  parseWhileStmt.fox  text_literals.fox
tests/VerifyMode/Sema/: name_binding.fox
tests/VerifyMode/run/: arrayBack.fox  arrayFront.fox  arrayPop.fox  divZeroDouble.fox  divZeroInt.fox  modZeroDouble.fox  modZeroInt.fox  negativeIndice.fox  outOfRangeArray.fox  outOfRangeString.fox
tests/res/astlocs/: functions.fox  vardecl.fox
tests/res/lexer/: incorrect_4.fox
tests/res/sourcelocs/: precise_test_1.txt
tests/src/: CMakeLists.txt  ContextTests.cpp  LexerTests.cpp  main.cpp  test.cpp  test1.cpp
tests/src/CommonTests/: CommonTests.cpp  ContextTests.cpp  TestDiagCons.hpp
tests/src/FoxTests/: ASTTests.cpp  AllocatorsTests.cpp  DiagnosticsTests.cpp  IdentifierTableTests.cpp  LexerTests.cpp  LocParserTests.cpp  LocTests.cpp  ParserTests.cpp  PtrVariantTests.cpp  SimpleParserTests.cpp  SourceManagerTests.cpp  UTF8Tests.cpp  Utils.cpp  Utils.hpp
tests/src/Support/: PrintObjects.cpp  PrintObjects.hpp  TestUtils.cpp  TestUtils.hpp
tests/src/TestUtils/: TestUtils.cpp  TestUtils.hpp
tools/CommandLine/: CMakeLists.txt  CommandLineTool.cpp
unittests/: CMakeLists.txt  readme.md
unittests/res/diagnosticsverifier/: badoffset.txt  offset.txt  parse.txt  trim.txt
unittests/res/sourcemanager/: precise_test_1.txt
unittests/src/: CMakeLists.txt  main.cpp
unittests/src/FoxTests/: ASTTests.cpp  DiagnosticVerifierTests.cpp  DiagnosticsTests.cpp  IdentifierTableTests.cpp  LexerTests.cpp  LocParserTests.cpp  SimpleParserTests.cpp  SourceManagerTests.cpp  UTF8Tests.cpp
unittests/src/Support/: PrintObjects.cpp  PrintObjects.hpp  TestUtils.cpp  TestUtils.hpp
(+852 files in other folders)
