cmake_minimum_required(VERSION 3.0)
message("CMake version is '${CMAKE_VERSION}'")

project(Fox)

include(FindPythonInterp)

# set minimal C++ standard 
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# generate the compile_commands.json
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# include most used cmake utilities
include(cmake/AddSource.cmake)

# include googletest related stuff 
include(cmake/GoogleTest.cmake)

# set output directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# set include directories
include_directories(includes)   # Fox lib includes
include_directories(thirdparty) # Third Party libraries includes

message("Compiler ID is '${CMAKE_CXX_COMPILER_ID}'")
message("Build type is '${CMAKE_BUILD_TYPE}'")

# fetch CXX environement variable
if(DEFINED ENV{CXX})
  set(CXX $ENV{CXX})
  message("Environment variable CXX is '${CXX}'")
else()
  message("Environment variable CXX not found")
  set(CXX "")
endif()

# check if clang-cl
if(CXX STREQUAL "clang-cl" OR CXX MATCHES "clang-cl.exe")
  set(IS_CLANGCL TRUE)
else()
  set(IS_CLANGCL FALSE)
endif()

# check if clang (can be clang-cl!)
if(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
  set(IS_CLANG TRUE)
else()
  set(IS_CLANG FALSE)
endif()

# check if MSVC
if(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
  set(IS_MSVC TRUE)
else()
  set(IS_MSVC FALSE)
endif()

# check if MSVC or clang-cl
if(IS_MSVC OR IS_CLANGCL)
  set(IS_MSVC_OR_CLANGCL TRUE)
else()
  set(IS_MSVC_OR_CLANGCL FALSE)
endif()

message("IS_MSVC=${IS_MSVC}")
message("IS_CLANGCL=${IS_CLANGCL}")
message("IS_CLANG=${IS_CLANG}")
message("IS_MSVC_OR_CLANGCL=${IS_MSVC_OR_CLANGCL}")

# MSVC flags
if(IS_MSVC_OR_CLANGCL)
  # MSVC-only options
  if(IS_MSVC)
    add_compile_options(/Za)
  endif()

  # warnings level 4
  if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
  endif()

  # disable RTTI
  if(CMAKE_CXX_FLAGS MATCHES "/GR")
      string(REGEX REPLACE "/GR" "/GR-" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
  else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR-")
  endif()

  # set compiler flags
  add_compile_options(/WX)
  add_compile_options(/permissive-)
  # silence problematic warnings 
    # C4706 "assignement within conditional expression"
    #   Reason: This construct is used a lot in the code
    add_compile_options(/wd4706) 
  
    # C4324 "structure was padded due to alignement specifier"
    # C4458 "declaration of x hides class member"
    #   Reason: That's usually the intended behaviour
    add_compile_options(/wd4324 /wd4458)
  
    # C4291 "no matching operator delete found; memory will not be freed if initialization fails"
    #   Reason: This error happens for the operator new overloads of the AST, which allocate memory
    #           in the ASTContext, and we can't free a single block of memory without freeing everything.
    add_compile_options(/wd4291)

    # C4244 "conversion from 'a' to 'b', possible loss of data"
    #   Reason: This warning only exist on MSVC. 
    add_compile_options(/wd4244)

    # C4505 "unreferenced local function has been removed"
    #   Reason: Usually intended because of compile time checks 
    #           e.g; "checkHasGetRange" in lib/AST/Stmt.cpp
    add_compile_options(/wd4505)
  
  # don't deprecate theses functions
  add_compile_options(-D_SCL_SECURE_NO_WARNINGS)

  # TODO: Disable exceptions again. Unfortunately, nonstd/string_view and utf8_cpp needs them.
  # disable exceptions
  # add_compile_options(/D_HAS_EXCEPTIONS=0)
  # add_compile_options(/EHsc)

  # disable rtti
  add_compile_options(/GR-)
endif()

if(${CMAKE_CXX_COMPILER_ID} MATCHES Clang) 
  # for clang-cl, we must pass -Xclang when passing an argument.
  function(add_clang_option arg)
    if(IS_CLANGCL)
      add_compile_options("SHELL:-Xclang ${arg}")
    else() 
      add_compile_options(${arg})
    endif()
  endfunction()

  # sometimes, we need options to be passed only if the compiler
  # is clang, not clang-cl!
  # e.g. if /GR- has already been passed, we should pass -fno-rtti
  function(add_clangonly_option arg)
    if(NOT IS_CLANGCL)
      add_compile_options("${arg}")
    endif()
  endfunction()
  

  add_clang_option(-Wno-unused-parameter)

  # don't add -Wall for clang-cl, as it maps to -Weverything.
  # /W4 is used above instead.
  add_clangonly_option(-Wall)

  # TODO: Disable exceptions again. Unfortunately, nonstd/string_view and utf8_cpp needs them.
  # add_clangonly_option(-fno-exceptions)
  add_clangonly_option(-fno-rtti)

  # TODO: Fix warnings generated by Wreorder then remove this 
  add_clang_option(-Wno-reorder)
endif()

# print the compile options used (for debug purposes)
get_directory_property(compile_opts COMPILE_OPTIONS)
message("Compile options used : ${compile_opts}")

# add main subdirs
add_subdirectory(lib)
add_subdirectory(tools/CommandLine)

# add test subdir
add_subdirectory(unittests)

# add lib target
add_library(libfox STATIC ${libfox_src})

# add llvm lit test suite 
add_custom_target(fox_tests
  COMMAND lit ${PROJECT_SOURCE_DIR}/tests -s -v 
  --param fox_bin_dir=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
  DEPENDS fox
)

# add test resources path macro
target_compile_definitions(libfox PRIVATE 
  TEST_RES_PATH="${CMAKE_CURRENT_SOURCE_DIR}/tests/res/")
