add_subdirectory(AST)
add_subdirectory(BC)
add_subdirectory(BCGen)
add_subdirectory(Common)
add_subdirectory(Driver)
add_subdirectory(Lexer)
add_subdirectory(Parser)
add_subdirectory(Sema)
add_subdirectory(VM)

set(libfox_src
  ${ast_src} 
  ${bc_src}
  ${bcgen_src}
  ${common_src}
  ${driver_src}
  ${lexer_src} 
  ${parser_src} 
  ${sema_src}
  ${vm_src}
  PARENT_SCOPE
)